--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MuKo2</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_favorite">Favorite</string>
+    <string name="screen_loading">Screen is loading...</string>
+    <string name="album_info">%1s • %2s</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
