--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
-    <string name="app_name">kotlinmusic</string>
+    <string name="app_name">Kotlin Music</string>
     <string name="title_activity_main">Main</string>
     <string name="albumcover">albumCover</string>
     <string name="albumCover" />
     <string name="pauseButton" />
     <string name="playButton" />
     <string name="musicTitle">TextView</string>
+    <string name="home">Home</string>
+    <string name="favorites">Favorites</string>
+    <string name="hello_world">Hello World</string>
 </resources>
