--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="home">Home</string>
     <string name="favorites">Favorites</string>
     <string name="hello_world">Hello World</string>
+    <string name="artistName" />
+    <string name="addToFavorite" />
 </resources>
