--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_world">Hello World</string>
     <string name="artistName" />
     <string name="addToFavorite" />
+    <string name="use_the_search_bar_to_lookup_for_an_artist_discography">Use the search bar to lookup for an artist discography!</string>
 </resources>
